...
        unregisterForNotifications()
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        title = "QUEUE"
        
        ConstraintUtils.applyStandardConstraintsToView(subView: tableView, parentView: view)
        tableView.rowHeight = ThemeHelper.sidePanelTableViewRowHeight
        tableView.register(NibContainer.songTableViewCellNib, forCellReuseIdentifier: "songDetailsTableViewCell")
        tableView.scrollsToTop = isExpanded
        tableView.allowsMultipleSelectionDuringEditing = true
...
        ConstraintUtils.applyConstraintsToView(withAnchors: [.top, .left, .right], subView: headerView, parentView: view)
        headerView.bottomAnchor.constraint(equalTo: topLayoutGuide.bottomAnchor).isActive = true
		tableView.contentOffset.y = -tableView.contentInset.top

        let selectButton = UIBarButtonItem(customView:self.selectButton)
        selectButton.isAccessibilityElement = true
        selectButton.accessibilityLabel = "playQueueSelectButton"
        navigationItem.rightBarButtonItem = selectButton
		
        dragToRearrangeGestureHandler = LongPressToDragGestureHandler(tableView: tableView)
        dragToRearrangeGestureHandler.delegate = self
		longPressGestureRecognizer = UILongPressGestureRecognizer(target: dragToRearrangeGestureHandler,
		                                                          action: #selector(LongPressToDragGestureHandler.handleGesture(_:)))
...
