...
        let color = UIColor.lightGray
        detailsLabel.textColor = color
        cloudLabel.textColor = color
        drmLabel.textColor = color
        
        menuButton.isAccessibilityElement = true
        menuButton.accessibilityLabel = "menu button"
        menuButton.accessibilityTraits = UIAccessibilityTraitButton | UIAccessibilityTraitAllowsDirectInteraction
    }
    
    @IBAction func menuButtonPressed(_ sender:UIButton!) {
        let point = CGPoint(x: bounds.maxX, y: bounds.midY)
		let convertedPoint = convert(point, from: window!.screen.fixedCoordinateSpace)
...
