...
            completionAction?()
        }
        let queueNextAction = KyoozMenuAction(title: "QUEUE NEXT") {
            audioQueuePlayer.enqueue(tracks: tracks, at: .next)
            completionAction?()
        }
        let queueRandomlyAction = KyoozMenuAction(title: "QUEUE RANDOMLY") {
            audioQueuePlayer.enqueue(tracks: tracks, at: .random)
            completionAction?()
        }
        
        menuBuilder.with(options: queueNextAction, queueLastAction, queueRandomlyAction)
		menuBuilder.with(options: KyoozMenuAction(title: "ADD TO PLAYLIST..") {
...
