...
	
	override func viewDidLoad() {
		super.viewDidLoad()
		//accessability configuration
		
        playPauseButton.isAccessibilityElement = true
		playPauseButton.accessibilityLabel = "miniPlayerPlayButton"
		playPauseButton.accessibilityTraits = UIAccessibilityTraitButton | UIAccessibilityTraitAllowsDirectInteraction
		
		//progressBarConfig
		ConstraintUtils.applyConstraintsToView(withAnchors: [.left, .right, .top], subView: progressView, parentView: view)
		progressView.progressTintColor = ThemeHelper.defaultVividColor
		progressView.trackTintColor = UIColor.darkGray
...
		menuButton.addTarget(self, action: #selector(self.menuButtonPressed(_:)), for: .touchUpInside)
        
        ConstraintUtils.applyConstraintsToView(withAnchors: [.top, .bottom], subView: labelPageVC.view, parentView: view)
        labelPageVC.view.leftAnchor.constraint(equalTo: playPauseButton.rightAnchor).isActive = true
        labelPageVC.view.rightAnchor.constraint(equalTo: menuButton.leftAnchor).isActive = true
        labelPageVC.view.isAccessibilityElement = true
		labelPageVC.view.accessibilityLabel = "miniPlayerTrackDetails"
		labelPageVC.view.accessibilityTraits = UIAccessibilityTraitButton | UIAccessibilityTraitAllowsDirectInteraction
		
        KyoozUtils.doInMainQueueAsync() {
            self.updateButtonStates()
        }
	}
...
