...
        progressSlider.rightAnchor.constraint(equalTo: timeRemainingLabel.leftAnchor, constant: -margin).isActive = true
        progressSlider.centerYAnchor.constraint(equalTo: view.centerYAnchor).isActive = true
        let trackAlpha:CGFloat = 0.4
//        progressSlider.maximumTrackTintColor = UIColor(white: 0.8, alpha: trackAlpha)
		progressSlider.minimumTrackTintColor = ThemeHelper.defaultVividColor
        progressSlider.maximumTrackTintColor = UIColor(white: 0, alpha: trackAlpha)
		progressSlider.accessibilityLabel = "playbackProgressSlider"

        let thumbView = UIView(frame: CGRect(x: 0, y: 0, width: 7, height: 20))
        thumbView.backgroundColor = UIColor.lightGray
        thumbView.layer.cornerRadius = 2
        thumbView.layer.masksToBounds = true
        let thumbImage = ImageUtils.imageForView(thumbView, opaque: false)
...
